remaining issues  • Output from arrays   ○ Change all search arrays to push if not already (done)   ○ Event handlers broken after taking out onclicks (done)   ○ Add pictures/url for book covers to array and add functionality to display   ○ Change picture on random book card   ○ Sort columns not working Add editable table

--- a/library js project/css/style.css
+++ b/library js project/css/style.css
@@ -18,3 +18,22 @@ ul {
 .carousel-inner img {
   margin: auto;
 }
+body {
+  padding-top: 54px;
+}
+
+@media (min-width: 992px) {
+  body {
+    padding-top: 56px;
+  }
+}
+/* #yodalModalLong {
+  z-index: 1000;
+} */
+.bg-image-full {
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
